# SmartIPO

./: README.md  pyproject.toml
docs/: AAOI_valuation_20260705.md  产品说明文档.md
i18n/: README_zh-hans.md
openspec/changes/build-textual-agent-workbench/: design.md  proposal.md  tasks.md
openspec/changes/cleanup-imports-and-channel-key/: design.md  proposal.md  tasks.md
openspec/changes/consolidate-core-layout/: design.md  proposal.md  tasks.md
openspec/changes/extend-fmp-market-data-for-ipo-research/: proposal.md  tasks.md
openspec/changes/fix-first-tool-call-timing-stuck/: tasks.md
openspec/changes/fix-strands-tool-wrapper/: design.md  proposal.md  tasks.md
openspec/changes/fix-tui-auto-height-reflow-after-width-restore/: design.md  proposal.md  tasks.md
openspec/changes/formalize-turn-thinking-placeholder-lifecycle/: design.md  proposal.md  tasks.md
openspec/changes/harden-tool-metadata-contract/: design.md
openspec/changes/show-thinking-for-all-waits/: design.md  (+2 more)
src/: __init__.py  agent.py  model_config.py
src/app/: __init__.py  default_agent.py
src/core/: __init__.py  agent.py  events.py  llm.py  strands_runtime.py  text2text.py  timeline.py
src/ext/: __init__.py  fmp.py
src/service/: __init__.py  model_hub.py
src/tool/: __init__.py  basic_tools.py  contracts.py  fileglide_tools.py  fmp_tools.py  registry.py  seedream_image.py
src/tui/: __init__.py  __main__.py  app.py
test/: test_basic_tools.py  test_fmp_client.py  test_fmp_tools.py  test_strands_runtime.py  test_timeline.py  test_tool_framework.py  test_tooling.py  test_tui_app.py
(+91 files in other folders)
