[project]
name = "openbuffett"
version = "0.1.0"
description = "An autonomous agent that study companies the way Buffett does."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "easyharness>=0.1.2",
    "ifindapi>=0.0.8",
    "markitdown>=0.1.6",
    "opentrade>=1.2.0",
    "prompt4py>=0.0.6",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "sympy>=1.14.0",
    "textual>=8.2.8",
    "textual-dev>=1.8.0",
]
